src/objects/ddrive__Configuration__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Account_Address_Fields__c</fullName>
        <defaultValue>&quot;Billing&quot;</defaultValue>
        <label>Account Address Fields</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddrive__Account_Fields_To_Preserve__c</fullName>
        <inlineHelpText>Comma delimited account fields not to overwrite if populated.</inlineHelpText>
        <label>Account Fields To Preserve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Address_Fields__c</fullName>
        <defaultValue>&quot;Mailing&quot;</defaultValue>
        <label>Contact Address Fields</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Email_Field__c</fullName>
        <defaultValue>&quot;Email&quot;</defaultValue>
        <label>Contact Email Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Fields_To_Preserve__c</fullName>
        <inlineHelpText>Comma delimited contact fields not to overwrite if populated.</inlineHelpText>
        <label>Contact Fields To Preserve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Record_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Record Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_ID_Instance_Name__c</fullName>
        <label>DonorDrive ID Instance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Error_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times in a row the sync has failed.</description>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Instance_Name__c</fullName>
        <label>Instance Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Logs_to_Store__c</fullName>
        <label># Logs to Store</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Opportunity_Stage_Name__c</fullName>
        <defaultValue>&quot;Closed Won&quot;</defaultValue>
        <description>Stage name for donations synced from DonorDrive</description>
        <label>Opportunity Stage Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Organization_Account_Record_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organization Account Record Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Password__c</fullName>
        <label>Password</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ddrive__Retry_Interval__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Retry Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Soft_Credits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Credits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Sync_Frequency__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Sync Frequency</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_and_Participant_Lookups__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Create team captain and participant lookups when creating donations.</description>
        <inlineHelpText>Create team captain and participant lookups when creating donations.</inlineHelpText>
        <label>Team Captain and Participant Lookups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Use_Default_Company_for_lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Company for lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Web_Service_URL__c</fullName>
        <label>Web Service URL</label>
        <type>Url</type>
    </fields>
    <label>DD Instance</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <columns>NAME</columns>
        <columns>ddrive__Instance_Name__c</columns>
        <columns>ddrive__Username__c</columns>
        <columns>ddrive__Password__c</columns>
        <columns>ddrive__Is_Active__c</columns>
        <columns>ddrive__Web_Service_URL__c</columns>
        <columns>ddrive__Retry_Interval__c</columns>
        <columns>ddrive__Use_Default_Company_for_lookup__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ddrive__Logs_to_Store__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INS-{0000}</displayFormat>
        <label>DD Instance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DD Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>